<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityResult"
    android:background="@color/white"
    android:padding="20dp">

    <!-- Top section-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/close_rel">
        <ImageButton
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:background="@drawable/color_stroke"
            android:contentDescription="@string/close_button"
            android:src="@drawable/close"
            android:id="@+id/close_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/result"
            android:textSize="16sp"
            android:textStyle="bold"
            />

    </RelativeLayout>
    <!-- End of top section-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/question_card"
        android:padding="20dp"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/neutral_color">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/congrats_icon"
            android:layout_centerHorizontal="true"
            android:id="@+id/congrats_icon"
            android:contentDescription="@string/congrats_icon" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congrats"
            android:textSize="20sp"
            android:layout_below="@+id/congrats_icon"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:id="@+id/congrats"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/you_have_scored"
            android:layout_below="@+id/congrats"
            android:text="@string/you_have_scored"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score"
            android:layout_below="@+id/you_have_scored"
            android:text="9/10"
            android:textColor="@color/tertiary_color"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            android:layout_marginTop="5dp"/>

    </RelativeLayout>

</RelativeLayout>